--- a/website/src/css/index.scss
+++ b/website/src/css/index.scss
@@ -212,6 +212,7 @@
 
 .GetStarted .steps li {
   font-size: 28px;
+  margin-bottom: 8px;
 }
 
 .GetStarted .steps li p {
